// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-navbar> Component <bolt-navbar> centered with 4 short links 1`] = `
<bolt-navbar class="t-bolt-xdark"
             center
             width="auto"
>
  <nav class="c-bolt-navbar c-bolt-navbar--auto  c-bolt-navbar--center c-bolt-navbar--small">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="/"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.8 49h52.5c1 0 1.7.8 1.7 1.8v31.5c0 1-.8 1.7-1.8 1.7H72.7c-1 0-1.7-.8-1.7-1.7V50.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1 78.8l16.7-29c.3-.5 1-.8 1.5-.8h36c1 0 1.8.8 1.8 1.8v31.5c0 1-.8 1.7-1.8 1.7H4.1a3.5 3.5 0 01-3-5.2z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.3V50.8c0-1 .8-1.8 1.7-1.8h36c.7 0 1.3.3 1.6.9l16.6 28.9a3.5 3.5 0 01-3 5.2h-51.2c-1 0-1.7-.8-1.7-1.7z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.8v31.4c0 1-.8 1.8-1.8 1.8H29.4a1.8 1.8 0 01-1.5-2.6L42.5 7a14 14 0 0112-7h28.8c1 0 1.7.8 1.7 1.8z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.8 0h42.6c5 0 9.6 2.7 12.1 7l14.7 25.4a1.7 1.7 0 01-1.5 2.6h-68c-1 0-1.7-.8-1.7-1.7V1.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.5 175l-14.7-25.4a1.8 1.8 0 011.5-2.6h68c1 0 1.7.8 1.7 1.8v31.4c0 1-.8 1.8-1.8 1.8H54.6a14 14 0 01-12.1-7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.7 147h54a1.8 1.8 0 011.5 2.6L155.5 175a14 14 0 01-12 7h-28.8c-1 0-1.7-.8-1.7-1.7v-31.5c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.8v31.5c0 1-.8 1.7-1.8 1.7h-50c-.6 0-1.2-.3-1.5-.9L1.1 103.2A3.5 3.5 0 014 98h65.1c1 0 1.8.8 1.8 1.7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.7 98H194a3.5 3.5 0 013 5.2l-16.6 29c-.3.5-1 .8-1.5.8h-92c-1 0-1.8-.8-1.8-1.8V99.8c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt
          <span class="u-bolt-hidden u-bolt-inline@xlarge">
            Design System
          </span>
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                      <span class="c-bolt-icon c-bolt-icon--github">
                        <svg class="c-bolt-icon__icon"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 28"
                        >
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M12 2a12 12 0 013.8 23.4c-.6.1-.8-.3-.8-.6v-3.3c0-1.1-.4-1.8-.8-2.2 2.6-.3 5.5-1.3 5.5-6 0-1.2-.5-2.3-1.3-3.1.1-.4.6-1.6-.1-3.2-1-.3-3.3 1.2-3.3 1.2a11.3 11.3 0 00-6 0S6.7 6.7 5.7 7a4.3 4.3 0 00-.1 3.2c-.8.8-1.3 1.9-1.3 3.2 0 4.6 2.8 5.6 5.5 5.9-.3.3-.6.8-.8 1.6-.6.3-2.4.9-3.4-1-.7-1.1-1.9-1.2-1.9-1.2-1.2 0 0 .7 0 .7.7.4 1.3 1.8 1.3 1.8.7 2.1 4 1.4 4 1.4v2.2c0 .3-.2.7-.8.6A12 12 0 0112 2zM4.5 19.2V19h-.3l.1.3h.2zm.5.6v-.3h-.3v.2H5zm.5.7v-.3c0-.1-.2-.2-.3-.1v.3c0 .2.2.1.3 0zm.7.6l-.1-.3h-.3v.3c.2 0 .3.1.4 0zm.8.4s0-.2-.2-.2h-.3l.2.3H7zm1 0h-.5c0 .2.1.3.3.3l.2-.2zm1 0c0-.2-.2-.2-.3-.2-.2 0-.3.1-.3.2l.3.2c.1 0 .3-.2.2-.3z"
                          >
                          </path>
                        </svg>
                      </span>
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> variable width 1`] = `
<div class="o-bolt-grid o-bolt-grid--center">
  <div class="o-bolt-grid__cell u-bolt-width-2/3 u-bolt-width-1/2@small">
    <bolt-navbar class="t-bolt-dark"
                 center
                 width="auto"
    >
      <nav class="c-bolt-navbar c-bolt-navbar--auto  c-bolt-navbar--center c-bolt-navbar--small">
        <bolt-nav-priority more-text="More">
          <nav class="c-bolt-nav-priority">
            <bolt-nav-indicator>
              <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a href="/pattern-lab/index.html"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Components
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a href="/docs/getting-started/index.html"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Docs
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a target="_blank"
                       href="https://github.com/bolt-design-system/bolt/releases"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Releases
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
                <li class="c-bolt-nav-priority__item">
                  <bolt-navlink>
                    <a target="_blank"
                       href="https://github.com/bolt-design-system/bolt"
                       class="c-bolt-navlink"
                    >
                      <span class="c-bolt-navlink__text">
                        Github
                      </span>
                      <span class="__icon">
                        <bolt-icon slot="after"
                                   name="github"
                        >
                          <span class="c-bolt-icon c-bolt-icon--github">
                            <svg class="c-bolt-icon__icon"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewbox="0 0 24 28"
                            >
                              <path fill="var(--bolt-theme-icon, currentColor)"
                                    d="M12 2a12 12 0 013.8 23.4c-.6.1-.8-.3-.8-.6v-3.3c0-1.1-.4-1.8-.8-2.2 2.6-.3 5.5-1.3 5.5-6 0-1.2-.5-2.3-1.3-3.1.1-.4.6-1.6-.1-3.2-1-.3-3.3 1.2-3.3 1.2a11.3 11.3 0 00-6 0S6.7 6.7 5.7 7a4.3 4.3 0 00-.1 3.2c-.8.8-1.3 1.9-1.3 3.2 0 4.6 2.8 5.6 5.5 5.9-.3.3-.6.8-.8 1.6-.6.3-2.4.9-3.4-1-.7-1.1-1.9-1.2-1.9-1.2-1.2 0 0 .7 0 .7.7.4 1.3 1.8 1.3 1.8.7 2.1 4 1.4 4 1.4v2.2c0 .3-.2.7-.8.6A12 12 0 0112 2zM4.5 19.2V19h-.3l.1.3h.2zm.5.6v-.3h-.3v.2H5zm.5.7v-.3c0-.1-.2-.2-.3-.1v.3c0 .2.2.1.3 0zm.7.6l-.1-.3h-.3v.3c.2 0 .3.1.4 0zm.8.4s0-.2-.2-.2h-.3l.2.3H7zm1 0h-.5c0 .2.1.3.3.3l.2-.2zm1 0c0-.2-.2-.2-.3-.2-.2 0-.3.1-.3.2l.3.2c.1 0 .3-.2.2-.3z"
                              >
                              </path>
                            </svg>
                          </span>
                        </bolt-icon>
                      </span>
                    </a>
                  </bolt-navlink>
                </li>
              </ul>
            </bolt-nav-indicator>
          </nav>
        </bolt-nav-priority>
      </nav>
    </bolt-navbar>
  </div>
</div>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with 4 short links 1`] = `
<bolt-navbar class="t-bolt-xdark"
             width="auto"
>
  <nav class="c-bolt-navbar c-bolt-navbar--auto ">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="/"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.8 49h52.5c1 0 1.7.8 1.7 1.8v31.5c0 1-.8 1.7-1.8 1.7H72.7c-1 0-1.7-.8-1.7-1.7V50.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1 78.8l16.7-29c.3-.5 1-.8 1.5-.8h36c1 0 1.8.8 1.8 1.8v31.5c0 1-.8 1.7-1.8 1.7H4.1a3.5 3.5 0 01-3-5.2z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.3V50.8c0-1 .8-1.8 1.7-1.8h36c.7 0 1.3.3 1.6.9l16.6 28.9a3.5 3.5 0 01-3 5.2h-51.2c-1 0-1.7-.8-1.7-1.7z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.8v31.4c0 1-.8 1.8-1.8 1.8H29.4a1.8 1.8 0 01-1.5-2.6L42.5 7a14 14 0 0112-7h28.8c1 0 1.7.8 1.7 1.8z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.8 0h42.6c5 0 9.6 2.7 12.1 7l14.7 25.4a1.7 1.7 0 01-1.5 2.6h-68c-1 0-1.7-.8-1.7-1.7V1.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.5 175l-14.7-25.4a1.8 1.8 0 011.5-2.6h68c1 0 1.7.8 1.7 1.8v31.4c0 1-.8 1.8-1.8 1.8H54.6a14 14 0 01-12.1-7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.7 147h54a1.8 1.8 0 011.5 2.6L155.5 175a14 14 0 01-12 7h-28.8c-1 0-1.7-.8-1.7-1.7v-31.5c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.8v31.5c0 1-.8 1.7-1.8 1.7h-50c-.6 0-1.2-.3-1.5-.9L1.1 103.2A3.5 3.5 0 014 98h65.1c1 0 1.8.8 1.8 1.7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.7 98H194a3.5 3.5 0 013 5.2l-16.6 29c-.3.5-1 .8-1.5.8h-92c-1 0-1.8-.8-1.8-1.8V99.8c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt
          <span class="u-bolt-hidden u-bolt-inline@xlarge">
            Design System
          </span>
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                      <span class="c-bolt-icon c-bolt-icon--github">
                        <svg class="c-bolt-icon__icon"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 28"
                        >
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M12 2a12 12 0 013.8 23.4c-.6.1-.8-.3-.8-.6v-3.3c0-1.1-.4-1.8-.8-2.2 2.6-.3 5.5-1.3 5.5-6 0-1.2-.5-2.3-1.3-3.1.1-.4.6-1.6-.1-3.2-1-.3-3.3 1.2-3.3 1.2a11.3 11.3 0 00-6 0S6.7 6.7 5.7 7a4.3 4.3 0 00-.1 3.2c-.8.8-1.3 1.9-1.3 3.2 0 4.6 2.8 5.6 5.5 5.9-.3.3-.6.8-.8 1.6-.6.3-2.4.9-3.4-1-.7-1.1-1.9-1.2-1.9-1.2-1.2 0 0 .7 0 .7.7.4 1.3 1.8 1.3 1.8.7 2.1 4 1.4 4 1.4v2.2c0 .3-.2.7-.8.6A12 12 0 0112 2zM4.5 19.2V19h-.3l.1.3h.2zm.5.6v-.3h-.3v.2H5zm.5.7v-.3c0-.1-.2-.2-.3-.1v.3c0 .2.2.1.3 0zm.7.6l-.1-.3h-.3v.3c.2 0 .3.1.4 0zm.8.4s0-.2-.2-.2h-.3l.2.3H7zm1 0h-.5c0 .2.1.3.3.3l.2-.2zm1 0c0-.2-.2-.2-.3-.2-.2 0-.3.1-.3.2l.3.2c.1 0 .3-.2.2-.3z"
                          >
                          </path>
                        </svg>
                      </span>
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with 6 lengthy links 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title--static">
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="marketing-gray"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--marketing-gray c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   data-name="Layer 1"
                   viewbox="0 0 32 32"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M30.3 8.8H28a13.7 13.7 0 012 7.2A14 14 0 1116 2a14.5 14.5 0 017.4 2.1V1.8A15.3 15.3 0 0016 0a16 16 0 1016 16 15.6 15.6 0 00-1.7-7.2"
                      data-name="Fill-1"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 8a8.2 8.2 0 013.1.6l1.5-1.5A10.4 10.4 0 0016 6a10 10 0 1010 10 9.4 9.4 0 00-1.2-4.7l-1.5 1.5A8.8 8.8 0 0124 16a8 8 0 11-8-8"
                      data-name="Fill-4"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 16.5a.5.5 0 11.5-.5.5.5 0 01-.5.5zm.9-2.8a3 3 0 00-.9-.2 2.5 2.5 0 102.5 2.5 2.4 2.4 0 00-.2-.9L25.4 8H30V6h-2.6l1.8-1.8-1.4-1.4L26 4.5V2h-2v4.6z"
                      data-name="Fill-6"
                >
                </path>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h2 class="c-bolt-navbar__title-text">
          Navbar with links
        </h2>
      </div>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Real-Time AI
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    End-to-end Automation
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Journey-centric Delivery
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Low Code
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Multi-dimensional Power
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Cloud Choice
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with a linked title 1`] = `
<bolt-navbar class="t-bolt-light"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <a class="c-bolt-navbar__title--link"
         href="https://www.boltdesignsystem.com"
      >
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.8 49h52.5c1 0 1.7.8 1.7 1.8v31.5c0 1-.8 1.7-1.8 1.7H72.7c-1 0-1.7-.8-1.7-1.7V50.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1 78.8l16.7-29c.3-.5 1-.8 1.5-.8h36c1 0 1.8.8 1.8 1.8v31.5c0 1-.8 1.7-1.8 1.7H4.1a3.5 3.5 0 01-3-5.2z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.3V50.8c0-1 .8-1.8 1.7-1.8h36c.7 0 1.3.3 1.6.9l16.6 28.9a3.5 3.5 0 01-3 5.2h-51.2c-1 0-1.7-.8-1.7-1.7z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.8v31.4c0 1-.8 1.8-1.8 1.8H29.4a1.8 1.8 0 01-1.5-2.6L42.5 7a14 14 0 0112-7h28.8c1 0 1.7.8 1.7 1.8z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.8 0h42.6c5 0 9.6 2.7 12.1 7l14.7 25.4a1.7 1.7 0 01-1.5 2.6h-68c-1 0-1.7-.8-1.7-1.7V1.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.5 175l-14.7-25.4a1.8 1.8 0 011.5-2.6h68c1 0 1.7.8 1.7 1.8v31.4c0 1-.8 1.8-1.8 1.8H54.6a14 14 0 01-12.1-7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.7 147h54a1.8 1.8 0 011.5 2.6L155.5 175a14 14 0 01-12 7h-28.8c-1 0-1.7-.8-1.7-1.7v-31.5c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.8v31.5c0 1-.8 1.7-1.8 1.7h-50c-.6 0-1.2-.3-1.5-.9L1.1 103.2A3.5 3.5 0 014 98h65.1c1 0 1.8.8 1.8 1.7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.7 98H194a3.5 3.5 0 013 5.2l-16.6 29c-.3.5-1 .8-1.5.8h-92c-1 0-1.8-.8-1.8-1.8V99.8c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h1 class="c-bolt-navbar__title-text">
          Bolt Design System
        </h1>
      </a>
    </div>
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Real-Time AI
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    End-to-end Automation
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Journey-centric Delivery
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Low Code
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Multi-dimensional Power
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="#!"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Cloud Choice
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> without a title 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <bolt-nav-priority more-text="More">
      <nav class="c-bolt-nav-priority">
        <bolt-nav-indicator>
          <ul class="c-bolt-nav-priority__list c-bolt-nav-priority__primary">
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/pattern-lab/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Components
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a href="/docs/getting-started/index.html"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Docs
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt/releases"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Releases
                  </span>
                </a>
              </bolt-navlink>
            </li>
            <li class="c-bolt-nav-priority__item">
              <bolt-navlink>
                <a target="_blank"
                   href="https://github.com/bolt-design-system/bolt"
                   class="c-bolt-navlink"
                >
                  <span class="c-bolt-navlink__text">
                    Github
                  </span>
                  <span class="__icon">
                    <bolt-icon slot="after"
                               name="github"
                    >
                      <span class="c-bolt-icon c-bolt-icon--github">
                        <svg class="c-bolt-icon__icon"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 28"
                        >
                          <path fill="var(--bolt-theme-icon, currentColor)"
                                d="M12 2a12 12 0 013.8 23.4c-.6.1-.8-.3-.8-.6v-3.3c0-1.1-.4-1.8-.8-2.2 2.6-.3 5.5-1.3 5.5-6 0-1.2-.5-2.3-1.3-3.1.1-.4.6-1.6-.1-3.2-1-.3-3.3 1.2-3.3 1.2a11.3 11.3 0 00-6 0S6.7 6.7 5.7 7a4.3 4.3 0 00-.1 3.2c-.8.8-1.3 1.9-1.3 3.2 0 4.6 2.8 5.6 5.5 5.9-.3.3-.6.8-.8 1.6-.6.3-2.4.9-3.4-1-.7-1.1-1.9-1.2-1.9-1.2-1.2 0 0 .7 0 .7.7.4 1.3 1.8 1.3 1.8.7 2.1 4 1.4 4 1.4v2.2c0 .3-.2.7-.8.6A12 12 0 0112 2zM4.5 19.2V19h-.3l.1.3h.2zm.5.6v-.3h-.3v.2H5zm.5.7v-.3c0-.1-.2-.2-.3-.1v.3c0 .2.2.1.3 0zm.7.6l-.1-.3h-.3v.3c.2 0 .3.1.4 0zm.8.4s0-.2-.2-.2h-.3l.2.3H7zm1 0h-.5c0 .2.1.3.3.3l.2-.2zm1 0c0-.2-.2-.2-.3-.2-.2 0-.3.1-.3.2l.3.2c.1 0 .3-.2.2-.3z"
                          >
                          </path>
                        </svg>
                      </span>
                    </bolt-icon>
                  </span>
                </a>
              </bolt-navlink>
            </li>
          </ul>
        </bolt-nav-indicator>
      </nav>
    </bolt-nav-priority>
  </nav>
</bolt-navbar>
`;

exports[`<bolt-navbar> Component <bolt-navbar> without links 1`] = `
<bolt-navbar class="t-bolt-dark"
             width="full"
>
  <nav class="c-bolt-navbar c-bolt-navbar--full ">
    <div class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title--static">
        <div class="c-bolt-navbar__title-icon">
          <bolt-icon name="marketing-gray"
                     size="large"
          >
            <span class="c-bolt-icon c-bolt-icon--marketing-gray c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   data-name="Layer 1"
                   viewbox="0 0 32 32"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M30.3 8.8H28a13.7 13.7 0 012 7.2A14 14 0 1116 2a14.5 14.5 0 017.4 2.1V1.8A15.3 15.3 0 0016 0a16 16 0 1016 16 15.6 15.6 0 00-1.7-7.2"
                      data-name="Fill-1"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 8a8.2 8.2 0 013.1.6l1.5-1.5A10.4 10.4 0 0016 6a10 10 0 1010 10 9.4 9.4 0 00-1.2-4.7l-1.5 1.5A8.8 8.8 0 0124 16a8 8 0 11-8-8"
                      data-name="Fill-4"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 16.5a.5.5 0 11.5-.5.5.5 0 01-.5.5zm.9-2.8a3 3 0 00-.9-.2 2.5 2.5 0 102.5 2.5 2.4 2.4 0 00-.2-.9L25.4 8H30V6h-2.6l1.8-1.8-1.4-1.4L26 4.5V2h-2v4.6z"
                      data-name="Fill-6"
                >
                </path>
              </svg>
            </span>
          </bolt-icon>
        </div>
        <h2 class="c-bolt-navbar__title-text">
          Navbar without links
        </h2>
      </div>
    </div>
  </nav>
</bolt-navbar>
`;
